--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+dj-database-url==0.5.0
 Django==1.11.4
 djangorestframework==3.7.1
 Markdown==2.6.9
 psycopg2==2.7.4
+python-decouple==3.1
 pytz==2018.3
 virtualenv==15.1.0
 whitenoise==3.3.1
