--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+Babel
 dj-database-url==0.5.0
-Django==1.11.4
-djangorestframework==3.7.1
-gunicorn==19.7.1
-psycopg2==2.7.4
-python-decouple==3.1
-pytz==2018.3
-whitenoise==3.3.1
-psycopg2-binary==2.7.4
+Django
+django-phonenumber-field
+django-rest-framework
+djangorestframework
+gunicorn
+phonenumbers
+psycopg2
+python-decouple
+pytz
+sqlparse
+whitenoise
