--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DEBUG=True
+DEBUG=False
 SECRET_KEY='%)s43=wotzo0$aaxr%1cs-lg5(@o8&@jnyn4x@08qe4_hyae1g'
-ALLOWED_HOSTS=.localhost, .herokuapp.com ,*
+ALLOWED_HOSTS=.localhost, event-manager97.herokuapp.com
 DATABASE_URL=sqlite:\db.sqlite3
